# spock-ghcjs-sample

./: .gitignore  README.md  build-7.10.3.sh  build-8.0.1.sh  build-lts.sh  build-lts6.sh  stack-frontend.yaml  stack.yaml  stack6-frontend.yaml  stack6.yaml  stack80-frontend.yaml  stack80.yaml
bundle/: index2.html  keter.sh
bundle/config/: keter.yaml
bundle6/: keter.sh
bundle6/config/: keter.yaml
bundle8/: keter8.sh
bundle8/config/: keter.yaml
project-api/: LICENSE  project-api.cabal
project-api/src/MyProject/Api/: User.hs
project-backend/: project-backend.cabal  stack.yaml
project-backend/app/: Main.hs
project-backend/src/MyProject/: Types.hs
project-backend/src/MyProject/Api/Server/: User.hs
project-frontend/: project-frontend.cabal  stack.yaml
project-frontend/app/: Main.hs
