name:                project-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tolysz/project-api#readme
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           2015(c) Marcin Tolysz
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyProject.Api.User
  build-depends:       base >= 4.7 && < 5
                     , Spock-api, text
  default-language:    Haskell2010
  default-extensions:  DataKinds, DeriveGeneric, DeriveAnyClass, OverloadedStrings


test-suite project-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tolysz/project-api
