name:                project-backend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tolysz/project-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           2015(c) Marcin Tolysz
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyProject.Api.Server.User
                       MyProject.Types
  build-depends:       base >= 4.7 && < 5
                     , Spock-core
                     , project-api
                     , Spock
--                     , wai
                     , Spock-api-server
  default-language:    Haskell2010

executable project-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-backend
                     , project-api
                     , Spock
                     , Spock-api-server
                     , Spock-core
                     , text
                     , mtl
                     , wai-extra
                     , wai-middleware-static
                     , rawstring-qm
--                     , wai

  default-language:    Haskell2010

test-suite project-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tolysz/project-backend
