name:                project-frontend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tolysz/project-frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           2015(c) Marcin Tolysz
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, Spock-api-ghcjs
  default-language:    Haskell2010

executable project-frontend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  if impl(ghcjs >= 0.2.1)
     ghcjs-options:     -dedupe
  build-depends:       base
                     , project-frontend
                     , project-api
                     , Spock-api-ghcjs
                     , ghcjs-dom
                     , ghcjs-base
                     , text
                     , aeson
                     , mtl
                     , rawstring-qm
                     , bytestring-lexing
  default-language:    Haskell2010
  default-extensions:   OverloadedStrings
  cpp-options: -DGHCJS_BROWSER

test-suite project-frontend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-frontend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tolysz/project-frontend
